--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <div class="row">
           <h4 class="text-center text-success pb-3">
             <strong>
-              Yuk Tulis Sesuatu buat aku, Terserah apapun itu. Saran, kritik
-              atau curhat pun juga boleh nanti aku baca
+              Yuk Tulis Sesuatu, Terserah apapun itu. Akan di tampilkan di bawah
+              secara Anonim
             </strong>
           </h4>
           <div class="col-md-2"></div>
@@ -87,12 +87,32 @@
 
     <!-- Section untuk menampilkan pesan -->
     <div class="container pt-4 pb-5">
-      <h3 class="text-center mb-4">Daftar Pesan</h3>
-      <div id="list-pesan">
-        <!-- Pesan dari Spreadsheet akan tampil di sini -->
+      <h3 class="text-center mb-4">Pesan Anonim</h3>
+
+      <div class="row mb-2">
+        <div class="col-md-6">
+          <div id="info-count" class="small text-muted"></div>
+        </div>
+        <div class="col-md-6 text-end">
+          <label class="me-2 small">Pesan per halaman:</label>
+          <select
+            id="page-size-select"
+            class="form-select d-inline-block"
+            style="width: auto"
+          >
+            <option value="5" selected>5</option>
+            <option value="10">10</option>
+            <option value="20">20</option>
+          </select>
+        </div>
       </div>
-      <nav>
-        <ul class="pagination justify-content-center" id="pagination"></ul>
+
+      <div id="list-pesan">
+        <!-- Pesan dari Spreadsheet akan tampil di sini sebagai list vertikal -->
+      </div>
+
+      <nav aria-label="Pagination">
+        <ul class="pagination justify-content-center mt-3" id="pagination"></ul>
       </nav>
     </div>
 
@@ -101,15 +121,9 @@
         <div class="col-md-4"></div>
         <div class="col-md-4 text-center">
           <h4 class="contact">Contact Me</h4>
-          <a href="https://wa.me/085280357433"
-            ><i class="fa-brands fa-whatsapp fa-2x m-2"></i
-          ></a>
-          <a href="https://web.facebook.com/profile.php?id=100008691764112"
-            ><i class="fa-brands fa-facebook fa-2x m-2"></i
-          ></a>
-          <a href="https://instagram.com/ulis_leu_sari?igshid=YmMyMTA2M2Y="
-            ><i class="fa-brands fa-instagram fa-2x m-2"></i
-          ></a>
+          <a href="#"><i class="fa-brands fa-whatsapp fa-2x m-2"></i></a>
+          <a href="#"><i class="fa-brands fa-facebook fa-2x m-2"></i></a>
+          <a href="#"><i class="fa-brands fa-instagram fa-2x m-2"></i></a>
         </div>
       </div>
     </div>
@@ -119,6 +133,7 @@
     </div>
 
     <script>
+      // Hanya 1 link untuk GET & POST
       const scriptURL =
         "https://script.google.com/macros/s/AKfycbx12WYRFkooHF1xxPnLJjgJqHkC1DwxnG1JV17aWUhPQ-Roj6-abBtYsS1dO4V32LC36Q/exec";
 
@@ -128,97 +143,220 @@
       const myAlert = document.querySelector(".my-alert");
       const listPesan = document.getElementById("list-pesan");
       const paginationEl = document.getElementById("pagination");
+      const infoCount = document.getElementById("info-count");
+      const pageSizeSelect = document.getElementById("page-size-select");
 
+      // state
       let currentPage = 1;
-      const pageSize = 5; // jumlah pesan per halaman
-      let messages = [];
+      let pageSize = parseInt(pageSizeSelect.value, 10); // bisa diubah dari select
+      let messages = []; // akan menampung array pesan
 
+      // --- Keamanan: escape HTML untuk mencegah XSS ---
+      function escapeHtml(unsafe) {
+        if (unsafe === null || unsafe === undefined) return "";
+        return String(unsafe)
+          .replace(/&/g, "&amp;")
+          .replace(/</g, "&lt;")
+          .replace(/>/g, "&gt;")
+          .replace(/"/g, "&quot;")
+          .replace(/'/g, "&#039;");
+      }
+
+      // ubah newline menjadi <br> setelah di-escape
+      function nl2brEscaped(text) {
+        return escapeHtml(text).replace(/\r?\n/g, "<br>");
+      }
+
+      // Submit form (kirim ke Google Apps Script)
       form.addEventListener("submit", (e) => {
         e.preventDefault();
         btnLoading.classList.toggle("d-none");
         btnKirim.classList.toggle("d-none");
+
         fetch(scriptURL, { method: "POST", body: new FormData(form) })
           .then((response) => {
+            // Handling response: tetap refresh daftar pesan
             btnLoading.classList.toggle("d-none");
             btnKirim.classList.toggle("d-none");
             myAlert.classList.remove("d-none");
             form.reset();
             loadPesan();
           })
-          .catch((error) => console.error("Error!", error.message));
+          .catch((error) => {
+            console.error("Error saat submit:", error);
+            btnLoading.classList.toggle("d-none");
+            btnKirim.classList.toggle("d-none");
+            alert("Gagal mengirim pesan. Cek console untuk detail.");
+          });
       });
 
+      // Render pagination dengan tombol Prev / Next + nomor halaman
       function renderPagination() {
-        const totalPages = Math.ceil(messages.length / pageSize);
+        const totalPages = Math.max(1, Math.ceil(messages.length / pageSize));
+        // jika currentPage di luar range, adjust
+        if (currentPage > totalPages) currentPage = totalPages;
+        if (currentPage < 1) currentPage = 1;
+
         let html = "";
 
-        for (let i = 1; i <= totalPages; i++) {
-          html += `<li class="page-item ${
-            i === currentPage ? "active" : ""
-          }"><a class="page-link" href="#">${i}</a></li>`;
+        // Prev button
+        html += `<li class="page-item ${currentPage === 1 ? "disabled" : ""}">
+                  <a class="page-link" href="#" data-action="prev" aria-label="Previous">Previous</a>
+                </li>`;
+
+        // show up to +/-2 nomor di sekitar current
+        const delta = 2;
+        let start = Math.max(1, currentPage - delta);
+        let end = Math.min(totalPages, currentPage + delta);
+
+        // jika di awal, perlu extend end; jika di akhir, extend start
+        if (currentPage <= delta) {
+          end = Math.min(totalPages, end + (delta - currentPage + 1));
         }
+        if (currentPage + delta > totalPages) {
+          start = Math.max(1, start - (currentPage + delta - totalPages));
+        }
+
+        for (let i = start; i <= end; i++) {
+          html += `<li class="page-item ${i === currentPage ? "active" : ""}">
+                    <a class="page-link" href="#" data-page="${i}">${i}</a>
+                  </li>`;
+        }
+
+        // Next button
+        html += `<li class="page-item ${
+          currentPage === totalPages ? "disabled" : ""
+        }">
+                  <a class="page-link" href="#" data-action="next" aria-label="Next">Next</a>
+                </li>`;
+
         paginationEl.innerHTML = html;
 
-        // add click event
-        const links = paginationEl.querySelectorAll("a");
-        links.forEach((link, index) => {
-          link.addEventListener("click", (e) => {
-            e.preventDefault();
-            currentPage = index + 1;
+        // event delegation untuk pagination
+        paginationEl.querySelectorAll("a").forEach((link) => {
+          link.addEventListener("click", (ev) => {
+            ev.preventDefault();
+            const action = link.getAttribute("data-action");
+            const page = parseInt(link.getAttribute("data-page"), 10);
+
+            if (action === "prev" && currentPage > 1) {
+              currentPage--;
+            } else if (action === "next" && currentPage < totalPages) {
+              currentPage++;
+            } else if (!isNaN(page)) {
+              currentPage = page;
+            }
             displayMessages();
+            renderPagination();
+            // scroll ke atas daftar pesan untuk UX lebih baik
+            listPesan.scrollIntoView({ behavior: "smooth" });
           });
         });
       }
 
+      // Build DOM cards (aman dari XSS karena menggunakan textContent)
       function displayMessages() {
-        const start = (currentPage - 1) * pageSize;
-        const end = start + pageSize;
-        const pageMessages = messages.slice(start, end);
+        const total = messages.length;
+        const totalPages = Math.max(1, Math.ceil(total / pageSize));
+        if (currentPage > totalPages) currentPage = totalPages;
 
-        if (pageMessages.length === 0) {
+        const startIdx = (currentPage - 1) * pageSize;
+        const endIdx = Math.min(startIdx + pageSize, total);
+        const pageMessages = messages.slice(startIdx, endIdx);
+
+        // info count & range
+        if (total === 0) {
+          infoCount.textContent = "Belum ada pesan.";
           listPesan.innerHTML =
             '<p class="text-center text-muted">Belum ada pesan...</p>';
+          paginationEl.innerHTML = "";
           return;
+        } else {
+          infoCount.textContent = `Menampilkan ${
+            startIdx + 1
+          } - ${endIdx} dari ${total} pesan. Halaman ${currentPage} dari ${totalPages}.`;
         }
 
+        // kosongkan list
         listPesan.innerHTML = "";
+
+        // setiap pesan dibuat sebagai card (vertikal)
         pageMessages.forEach((item) => {
-          const pesan = item.pesan ? item.pesan : "(Pesan kosong)";
-          const waktu = item.timestamp
-            ? new Date(item.timestamp).toLocaleString()
-            : "-";
-          const card = `
-            <div class="card shadow-sm mb-3">
-              <div class="card-body">
-                <p class="card-text">${pesan}</p>
-                <small class="text-muted">${waktu}</small>
-              </div>
-            </div>`;
-          listPesan.innerHTML += card;
+          const pesanRaw = item.pesan ? item.pesan : "(Pesan kosong)";
+          const waktuRaw = item.timestamp ? new Date(item.timestamp) : null;
+
+          // card
+          const card = document.createElement("div");
+          card.className = "card shadow-sm mb-3";
+
+          const cardBody = document.createElement("div");
+          cardBody.className = "card-body";
+
+          // pesan: gunakan innerHTML dengan string yang sudah di-escape + nl2br
+          const p = document.createElement("p");
+          p.className = "card-text";
+          p.innerHTML = nl2brEscaped(pesanRaw); // aman karena di-escape dulu
+
+          const small = document.createElement("small");
+          small.className = "text-muted";
+          small.textContent = waktuRaw ? waktuRaw.toLocaleString() : "-";
+
+          cardBody.appendChild(p);
+          cardBody.appendChild(small);
+          card.appendChild(cardBody);
+          listPesan.appendChild(card);
         });
       }
 
+      // Ambil data dari script (GET)
       function loadPesan() {
         fetch(scriptURL)
-          .then((res) => res.json())
+          .then((res) => {
+            // Pastikan response json
+            if (!res.ok) throw new Error("Network response was not ok");
+            return res.json();
+          })
           .then((json) => {
-            if (json.result === "success" && json.data.length > 0) {
-              messages = json.data.reverse();
+            // FORMAT EXPECTED (example):
+            // { result: "success", data: [ { pesan: "text", timestamp: "2022-11-29T..." }, ... ] }
+            if (json.result === "success" && Array.isArray(json.data)) {
+              // ambil data dan urutkan terbalik (terbaru di atas)
+              messages = json.data.slice().reverse();
+              // reset current page jika perlu
+              currentPage = 1;
               displayMessages();
               renderPagination();
             } else {
+              // fallback jika format beda
+              console.warn(
+                "Response tidak sesuai format yang diharapkan:",
+                json
+              );
+              messages = [];
               listPesan.innerHTML =
                 '<p class="text-center text-muted">Belum ada pesan...</p>';
               paginationEl.innerHTML = "";
+              infoCount.textContent = "";
             }
           })
           .catch((err) => {
             console.error("Gagal ambil data:", err);
             listPesan.innerHTML =
-              '<p class="text-center text-danger">Error mengambil data!</p>';
+              '<p class="text-center text-danger">Error mengambil data! Cek console.</p>';
+            paginationEl.innerHTML = "";
+            infoCount.textContent = "";
           });
       }
 
+      // ketika user ganti page size
+      pageSizeSelect.addEventListener("change", () => {
+        pageSize = parseInt(pageSizeSelect.value, 10) || 5;
+        currentPage = 1;
+        displayMessages();
+        renderPagination();
+      });
+
+      // panggil pertama kali
       loadPesan();
     </script>
 
